FIX (wrapped element): width

--- a/examples/src/demo-styles.css
+++ b/examples/src/demo-styles.css
@@ -11,6 +11,11 @@ body, html, h1, h2 {
 	margin: 50px auto 0;
 }
 
+.wide-page {
+	width: 100%;
+	margin: 50px auto 0;
+}
+
 .wrapper {
 	background: darkcyan;
 	width: 300px;
@@ -18,7 +23,15 @@ body, html, h1, h2 {
 	margin-bottom: 20px;
 }
 
-.wrapper div {
+.dynamic-wrapper {
+	background: darkcyan;
+	width: 50%;
+	padding: 20px;
+	margin: 0px auto 20px;
+}
+
+.wrapper div,
+.dynamic-wrapper div {
 	width: 300px;
 	height: 20%;
 	overflow: auto;
